fix：update vite.config.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>vue-drag-split 基于Vue的拖拽分屏组件 Demo</title>
   </head>
   <body>
     <div id="app"></div>
